--- a/nginx/conf.d/arkcase.conf
+++ b/nginx/conf.d/arkcase.conf
@@ -82,16 +82,16 @@ server {
         client_max_body_size 500M;
     }
 
-    # Pentaho
-    location /pentaho {
-        proxy_pass http://pentaho:8080/pentaho;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        proxy_buffering off;
-    }
+    # Pentaho (NOT AVAILABLE - service not deployed)
+    # location /pentaho {
+    #     proxy_pass http://pentaho:8080/pentaho;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     
+    #     proxy_buffering off;
+    # }
 
     # ActiveMQ Web Console (optional - consider restricting access)
     location /admin/activemq {
