Refactor Dockerfile and health checks; update Nginx configuration for improved proxy handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,10 +42,11 @@ services:
       - solr-precreate
       - arkcase
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8983/solr/arkcase/admin/ping || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 30s
     deploy:
       resources:
         limits:
@@ -76,7 +77,7 @@ services:
     networks:
       - arkcase-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8161/admin/ || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -105,7 +106,7 @@ services:
     networks:
       - arkcase-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/alfresco/api/-default-/public/alfresco/versions/1/probes/-ready- || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -133,7 +134,7 @@ services:
     networks:
       - arkcase-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/share || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -155,10 +156,11 @@ services:
     networks:
       - arkcase-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8090/actuator/health || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 60s
     deploy:
       resources:
         limits:
@@ -220,7 +222,7 @@ services:
     networks:
       - arkcase-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9999/actuator/health || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -253,13 +255,13 @@ services:
       CATALINA_OPTS: "-Xms2g -Xmx4g -Dspring.datasource.url=jdbc:postgresql://postgres:5432/arkcase -Dspring.datasource.username=arkcase -Dspring.datasource.password=${DB_PASSWORD:-changeme} -Dspring.datasource.driver-class-name=org.postgresql.Driver -Dsolr.host=solr -Dsolr.port=8983 -Dactivemq.broker.url=tcp://activemq:61616 -Dalfresco.host=alfresco -Dalfresco.port=8080 -Dconfig.server.url=http://config-server:9999 -Dacm.configurationserver.url=http://config-server:9999 -Dserver.ssl.enabled=true -Dserver.ssl.key-store=/opt/arkcase/certs/keystore.p12 -Dserver.ssl.key-store-password=${KEYSTORE_PASSWORD:-changeme} -Dserver.ssl.keyStoreType=PKCS12"
     volumes:
       - arkcase-data:/opt/arkcase/data
-      - ./arkcase-config:/opt/arkcase/config:ro
+      - ./arkcase-config:/home/arkcase/.arkcase:ro
       - arkcase-logs:/opt/arkcase/logs
       - ./certs:/opt/arkcase/certs:ro
     networks:
       - arkcase-network
     healthcheck:
-      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:8080/arkcase || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -294,7 +296,7 @@ services:
     networks:
       - arkcase-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:80/ || exit 1"]
+      test: ["CMD-SHELL", "test -d /proc/1 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
