--- a/Dockerfile.production.arkcase-core
+++ b/Dockerfile.production.arkcase-core
@@ -9,9 +9,10 @@ COPY arkcase-core/ /build/
 
 # Build the application (skip tests for speed)
 RUN mvn clean package -DskipTests -q && \
-    find target -name "arkcase*.war" -type f > /tmp/war_file.txt && \
-    if [ ! -s /tmp/war_file.txt ]; then find target -name "*.war" -type f > /tmp/war_file.txt; fi && \
-    cat /tmp/war_file.txt
+    echo "=== Looking for WAR files ===" && \
+    find . -name "*.war" -type f && \
+    cp acm-standard-applications/arkcase/target/arkcase-*.war /tmp/arkcase.war && \
+    ls -lh /tmp/arkcase.war
 
 # Stage 2: Runtime container
 FROM tomcat:9.0-jdk11-openjdk-slim
@@ -25,7 +26,7 @@ RUN useradd --create-home --user-group arkcase && \
     chown -R arkcase:arkcase /opt/arkcase /usr/local/tomcat
 
 # Copy built WAR from builder
-COPY --from=builder --chown=arkcase:arkcase /build/target/arkcase*.war /usr/local/tomcat/webapps/arkcase.war
+COPY --from=builder --chown=arkcase:arkcase /tmp/arkcase.war /usr/local/tomcat/webapps/arkcase.war
 
 # Remove default ROOT application
 RUN rm -rf /usr/local/tomcat/webapps/ROOT /usr/local/tomcat/webapps/docs /usr/local/tomcat/webapps/examples /usr/local/tomcat/webapps/manager /usr/local/tomcat/webapps/host-manager
