--- a/nginx/conf.d/arkcase.conf
+++ b/nginx/conf.d/arkcase.conf
@@ -10,7 +10,27 @@ server {
     }
     
     location / {
-        return 301 https://$host$request_uri;
+        proxy_pass http://arkcase-core:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port 8080;
+        
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Timeouts
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        
+        # Buffer settings
+        proxy_buffering off;
+        proxy_request_buffering off;
     }
 }
 
@@ -32,7 +52,7 @@ server {
 
     # Root location
     location / {
-        proxy_pass https://arkcase-core:8843;
+        proxy_pass http://arkcase-core:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
