Update environment configurations, enhance Docker setup, and add database initialization scripts for ArkCase

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database Configuration
-DB_PASSWORD=YourSecurePasswordHere123!
+DB_PASSWORD=@rM3d1A!
 
 # ActiveMQ Configuration
 ACTIVEMQ_PASSWORD=YourActiveMQPassword123!
