--- a/nginx/conf.d/arkcase.conf
+++ b/nginx/conf.d/arkcase.conf
@@ -3,6 +3,10 @@ server {
     listen 80;
     server_name _;
     
+    # Docker embedded DNS resolver
+    resolver 127.0.0.11:53 valid=10s;
+    resolver_timeout 5s;
+    
     location /health {
         access_log off;
         return 200 "healthy\n";
@@ -11,7 +15,8 @@ server {
     
     location / {
         # Proxy root directly to arkcase application (no redirect)
-        proxy_pass http://arkcase-core:8080/arkcase;
+        set $upstream_arkcase_core "http://arkcase-core:8080";
+        proxy_pass $upstream_arkcase_core/arkcase;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -34,35 +39,18 @@ server {
         proxy_request_buffering off;
     }
     
-    location /arkcase {
-        proxy_pass http://arkcase-core:8080/arkcase;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto http;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port 8080;
-        
-        # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Timeouts
-        proxy_connect_timeout 300s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
-        
-        # Buffer settings
-        proxy_buffering off;
-        proxy_request_buffering off;
-    }
+
 }
 
 # HTTPS server
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name _;
+    
+    # Docker embedded DNS resolver
+    resolver 127.0.0.11:53 valid=10s;
+    resolver_timeout 5s;
 
     # SSL certificates
     ssl_certificate /etc/nginx/certs/arkcase.crt;
@@ -77,32 +65,8 @@ server {
 
     # Root location - proxy directly to arkcase (no redirect)
     location / {
-        proxy_pass http://arkcase-core:8080/arkcase;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        
-        # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Timeouts
-        proxy_connect_timeout 300s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
-        
-        # Buffer settings
-        proxy_buffering off;
-        proxy_request_buffering off;
-    }
-    
-    # ArkCase Application
-    location /arkcase {
-        proxy_pass http://arkcase-core:8080/arkcase;
+        set $upstream_arkcase_core "http://arkcase-core:8080";
+        proxy_pass $upstream_arkcase_core/arkcase;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -125,9 +89,11 @@ server {
         proxy_request_buffering off;
     }
 
+
     # Alfresco Share
     location /share {
-        proxy_pass http://alfresco-share:8080/share;
+        set $upstream_alfresco_share "http://alfresco-share:8080";
+        proxy_pass $upstream_alfresco_share/share;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -138,7 +104,8 @@ server {
 
     # Alfresco Repository
     location /alfresco {
-        proxy_pass http://alfresco:8080/alfresco;
+        set $upstream_alfresco "http://alfresco:8080";
+        proxy_pass $upstream_alfresco/alfresco;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -165,7 +132,8 @@ server {
 
     # ActiveMQ Web Console (optional - consider restricting access)
     location /admin/activemq {
-        proxy_pass http://activemq:8161;
+        set $upstream_activemq "http://activemq:8161";
+        proxy_pass $upstream_activemq;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -180,7 +148,8 @@ server {
 
     # Solr Admin (should be restricted in production)
     location /solr {
-        proxy_pass http://solr:8983/solr;
+        set $upstream_solr "http://solr:8983";
+        proxy_pass $upstream_solr/solr;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
